<resources>
    <string name="app_name">FoodShop</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_password">Password</string>
    <string name="already_have_an_account_login">Already Have An Account? Login</string>
    <string name="contact_for_support">Contact For Support</string>
    <string name="subtitle">The Fast Food Delivery</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_sign_up">Dont Have An Account? Sign Up</string>
    <string name="forget_password">Forget Password?</string>
</resources>